# cargo-embed

./: CHANGELOG.md  Cargo.toml  README.md
interface/: Cargo.toml
interface/src/: lib.rs
src/: main.rs
src/config/: default.toml  mod.rs
src/rttui/: app.rs  channel.rs  event.rs  mod.rs
src/svd_viewer/: mod.rs  runner.rs  server.rs  updater.rs
svd_viewer/: .gitignore  Cargo.toml  Makefile.toml  index.html
svd_viewer/src/: field.rs  file.rs  lib.rs  peripheral.rs  register.rs  svd_loader.rs
svd_viewer/src/svd/: types.rs
svd_viewer/static/: index.html
svd_viewer/styles/: _layout.scss  main.scss
