[package]
name = "svd-viewer"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.3"
wasm-bindgen = "0.2"
svd-parser = "0.9.0"
js-sys = "0.3"
log = "0.4.11"
console_log = { version = "0.2", features = ["color"] }
interface = { path = "../interface" }
serde_json = { version = "1.0.51" }
anyhow = "1.0.32"
yewtil = "0.3.1"