[package]
name = "svd-viewer"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { git = "https://github.com/yewstack/yew" }
yew-services = { git = "https://github.com/yewstack/yew" }
wasm-bindgen = "0.2"
svd-parser = { version = "0.9.0", features = ["serde"] }
js-sys = "0.3"
log = "0.4.11"
console_log = { version = "0.2", features = ["color"] }
interface = { path = "../interface" }
serde_json = { version = "1.0.51" }
anyhow = "1.0.32"
yewtil = "0.3.1"
serde = "1.0.0"
wasm-logger = "0.2"